# pytree

./: README.md  pyproject.toml
src/pytree/: dev.py  pytree.py
