[project]
name = "pytree"
version = "0.1.0"
description = "Rewrite GNU tree in Python"
authors = [
    { name = "Hugo Jarkoff", email = "hugo.jarkoff@namr.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pytree"]
